tests/files/type_checker_tests/should_pass/028.cmdr
//Test bindings type check
x: (int, int) -> int = fn (a: int, b: int) -> a + b;
y = x;
